# formalcards5

./: Cargo.toml  README.md  formlcards.md  package.json
src/: base.ts  base2.ts  c8s.ts  egw.ts  golf.ts  main.rs  pnc.ts  qg.ts
