[package]
name = "formalcards5"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
typetag = "0.2.21"


eframe = { version = "0.34.1", features = [
  "default",
  "__screenshot",
] }
egui_extras = { version = "0.34.1", features = ["default", "image"] }
env_logger = { version = "0.11.10", features = ["auto-color", "humantime"] }